--- a/FastFoodDemo/conf/application.conf
+++ b/FastFoodDemo/conf/application.conf
@@ -2,8 +2,10 @@
 # ~~~~~
 # You can declare as many datasources as you want.
 # By convention, the default datasource is named `default`
-db.default.driver=org.h2.Driver
-db.default.url="jdbc:h2:mem:play"
+db.default.driver=com.mysql.jdbc.Driver
+db.default.url="mysql://jouko:knoldus123@localhost/FastFoodDemo"
+db.default.username=jouko
+db.default.password="knoldus123"
 
 # Assets configuration
 # ~~~~~
